# Lumina

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  package-lock.json
.github/: FUNDING.yml
src/: app.css  breathe.html  games.html  home.html  index-copy.html  index.html  index2.html  main.js  quotes.html  splash.html  stories.html  style.css  template.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/css/: audioPlayer.css  dialog.css  main.css  titlebar.css
src/games/: BullsEye.html  CatJumper.html  ClickOnTheCircle.html  CubNPup.html  Minesweeper.html  RememberCard.html  RockPaperScissors.html  SnakesAndLadders.html  TheCube.html  TicTacToe.html  TiltingMaze.html  TowerBlocks.html
src/games/BullsEye/: MorphSVGPlugin.js  TweenMax.js  index.html
src/games/CatJumper/: index.html  script.js  style.css
src/games/ClickOnTheCircle/: index.html  script.js  style.css
src/games/CubNPup/: index.html  script.js  style.css
src/games/Minesweeper/: index.html  normalize.css  script.js  style.css
src/games/RememberCard/: index.html  script.js  style.css
src/games/RockPaperScissors/: index.html  script.js  style.css
src/games/SnakesAndLadders/: index.html  script.js  style.css
src/games/TheCube/: index.html  script.js  style.css  three.js
src/games/TicTacToe/: index.html  react-dom.js  react-production.js  script.js  style.css
src/games/TiltingMaze/: index.html  script.js  style.css
src/games/TowerBlocks/: index.html  script.js  style.css  three.js  tweenmax.js
src/games/VelociraptorDino/: index.html  script.js  style.css
src/games/WordSearch/: index.html  react-dom.js  script.js  style.css
src/js/: aboutDialog.js  audioPlayer.js  closeDialog.js  date.js  greeting.js  location.js  script.js  time.js  titlebar.js
src/stories/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4.html  40.html  41.html  42.html  43.html  44.html  45.html  (+44 more)
