[package]
name = "lumina"
version = "1.0.0"
description = ""
authors = ["KoolApps Team"]
license = "MIT"
repository = "https://github.com/teamkoolapps/Lumina"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
tauri-bundler = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["fs-exists", "fs-read-dir", "fs-read-file", "fs-write-file", "shell-open", "window-close", "window-hide", "window-maximize", "window-minimize", "window-show", "window-unmaximize", "window-unminimize"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
